--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -11,7 +11,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#about">About</a></li>
+                <li><a routerLink="/search">Search</a></li>
+                <li><a routerLink="/about">About</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
