--- a/app/search/search.component.html
+++ b/app/search/search.component.html
@@ -1,1 +1,33 @@
-<p>SEARCH</p>
+<h1>Quieres música?</h1>
+<p class="lead">Utiliza mySpotify para obtener la música de tus artistas favoritos</p>
+<form>
+    <div class="form-group">
+        <input type="text" name="searchStr" class="form-control" placeholder="Teclea tu artista...">
+    </div>
+</form>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="search-res well">
+            <h4><a href="#">Nombre del Artista</a></h4>
+            <div>
+                <span class="label label-default" style="margin-right: 4px">género 1</span>
+                <span class="label label-default" style="margin-right: 4px">género 2</span>
+                <span class="label label-default" style="margin-right: 4px">género 3</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="search-res well">
+            <h4><a href="#">Nombre del Artista</a></h4>
+            <div>
+                <span class="label label-default" style="margin-right: 4px">género 1</span>
+                <span class="label label-default" style="margin-right: 4px">género 2</span>
+                <span class="label label-default" style="margin-right: 4px">género 3</span>
+            </div>
+        </div>
+    </div>
+</div>
