--- a/app/search/search.component.html
+++ b/app/search/search.component.html
@@ -2,31 +2,24 @@
 <p class="lead">Utiliza mySpotify para obtener la música de tus artistas favoritos</p>
 <form>
     <div class="form-group">
-        <input type="text" name="searchStr" class="form-control" placeholder="Teclea tu artista...">
+        <input type="text" name="searchStr" class="form-control" placeholder="Teclea tu artista..."
+           [(ngModel)]="searchStr"
+           (keyup)="searchMusic()"
+        >
     </div>
 </form>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="search-res well">
-            <h4><a href="#">Nombre del Artista</a></h4>
-            <div>
-                <span class="label label-default" style="margin-right: 4px">género 1</span>
-                <span class="label label-default" style="margin-right: 4px">género 2</span>
-                <span class="label label-default" style="margin-right: 4px">género 3</span>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-12">
-        <div class="search-res well">
-            <h4><a href="#">Nombre del Artista</a></h4>
-            <div>
-                <span class="label label-default" style="margin-right: 4px">género 1</span>
-                <span class="label label-default" style="margin-right: 4px">género 2</span>
-                <span class="label label-default" style="margin-right: 4px">género 3</span>
+<div *ngIf="searchResults.length > 0">
+    <div *ngFor="let artist of searchResults">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="search-res well">
+                    <h4><a href="#">{{artist.name}}</a></h4>
+                    <div>
+                        <span *ngFor="let genre of artist.genres"
+                              class="label label-default" style="margin-right: 4px">{{genre}}</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
