--- a/app/artist/artist.component.html
+++ b/app/artist/artist.component.html
@@ -1,48 +1,28 @@
-<div>
+<div *ngIf="artist">
     <header class="artist-header">
-        <div>
-            <img class="artist-thumb" src="https://i.scdn.co/image/934c57df9fbdbbaa5e93b55994a4cb9571fd2085">
+        <div *ngIf="artist.images.length > 0">
+            <img class="artist-thumb" src="{{artist.images[0].url}}">
         </div>
-        <h1>The Beatles</h1>
-        <p>
-            <span class="label label-default" style="margin-right: 4px">british invasion</span>
-            <span class="label label-default" style="margin-right: 4px">classic rock</span>
-            <span class="label label-default" style="margin-right: 4px">merseybeat</span>
-            <span class="label label-default" style="margin-right: 4px">protopunk</span>
-            <span class="label label-default" style="margin-right: 4px">psychedelic rock</span>
-            <span class="label label-default" style="margin-right: 4px">rock</span>
+        <h1>{{artist.name}}</h1>
+        <p *ngIf="artist.genres.length > 0">
+            <span *ngFor="let genre of artist.genres" class="label label-default" style="margin-right: 4px">{{genre}}</span>
         </p>
     </header>
 
     <div class="artist-albums">
         <div class="row">
-
-            <div>
+            <div *ngFor="let album of albums">
                 <div class="col-md-3">
                     <div class="well album">
-                        <div>
+                        <div *ngIf="album.images.length > 0">
                             <a href="#">
-                                <img src="https://i.scdn.co/image/332e01f24f1eb71d898eb0db8d3d641eea5b0240" class="album-thumb img-thumbnail">
+                                <img src="{{album.images[0].url}}" class="album-thumb img-thumbnail">
                             </a>
-                            <h5>Music From Another Dimension!</h5>
+                            <h5>{{album.name}}</h5>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div>
-                <div class="col-md-3">
-                    <div class="well album">
-                        <div>
-                            <a href="#">
-                                <img src="https://i.scdn.co/image/332e01f24f1eb71d898eb0db8d3d641eea5b0240" class="album-thumb img-thumbnail">
-                            </a>
-                            <h5>Music From Another Dimension!</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
