- Añadimos la url para el album de un artista

--- a/app/artist/artist.component.html
+++ b/app/artist/artist.component.html
@@ -15,7 +15,7 @@
                 <div class="col-md-3">
                     <div class="well album">
                         <div *ngIf="album.images.length > 0">
-                            <a href="#">
+                            <a routerLink="/album/{{album.id}}">
                                 <img src="{{album.images[0].url}}" class="album-thumb img-thumbnail">
                             </a>
                             <h5>{{album.name}}</h5>
