--- a/app/search/search.component.html
+++ b/app/search/search.component.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="search-res well">
-                    <h4><a href="#">{{artist.name}}</a></h4>
+                    <h4><a routerLink="/artist/{{artist.id}}">{{artist.name}}</a></h4>
                     <div>
                         <span *ngFor="let genre of artist.genres"
                               class="label label-default" style="margin-right: 4px">{{genre}}</span>
