--- a/app/album/album.component.html
+++ b/app/album/album.component.html
@@ -32,7 +32,7 @@
             <tr *ngFor="let track of tracks">
                 <td class="col-xs-1">{{track.track_number}}</td>
                 <td class="col-xs-9">{{track.name}}</td>
-                <td class="col-xs-1">{{track.duration_ms}}</td>
+                <td class="col-xs-1">{{track.duration_ms | msToTime }}</td>
                 <td class="col-xs-1" style="text-align: right"><a href="{{track.preview_url}}" class="btn btn-primary btn-xs" target="_blank">Escuchar</a></td>
             </tr>
             </tbody>
