--- a/app/search/search.component.html
+++ b/app/search/search.component.html
@@ -15,6 +15,7 @@
             <div class="col-md-12">
                 <div class="search-res well">
                     <h4><a routerLink="/artist/{{artist.id}}">{{artist.name}}</a></h4>
+                    <popularity [rating]='artist.popularity'></popularity>
                     <div>
                         <span *ngFor="let genre of artist.genres"
                               class="label label-default" style="margin-right: 4px">{{genre}}</span>
